# ml-system-design-itmo

./: .gitignore  .pre-commit-config.yaml  Dockerfile.fastapi  Dockerfile.streamlit  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: synthetic_dataset.csv
data/processed/: X.npy  y.npy
docs/: baseline_model_evaluation.md  eda_report.md  ml_system_design_doc.md
examples/: README.md  api_examples.py  test_api_examples.py
models/: evaluation_results.joblib  vacancy_matcher.joblib
notebooks/: eda.ipynb  style.mplstyle
src/app/: streamlit_app.py  tools.py
src/benchmark/: benchmark.py  load_test.py  process_scores.py  summaries.py  utils.py
src/platform/: __init__.py  base_predictor.py  dummy_predictor.py  lm_predictor.py  ridge_predictor.py
src/platform/prompts/: simple_prompt.py
src/service/: app.py  models.py  test_api.py
src/training_pipeline/: data_preprocessing.py  train.py
tests/: test_dummy.py
