[tool.poetry]
name = "lunapark"
version = "0.2.0"
description = ""
authors = ["Konstantin.Grotov <konstantin.grotov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." },
]

[tool.poetry.dependencies]
python = "^3.11"
types-requests = "^2.31.0"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"


[tool.poetry.group.research.dependencies]
jupyter = "^1.1.1"
notebook = "^7.2.2"


[tool.poetry.group.service.dependencies]
fastapi = "^0.115.3"
requests = "^2.32.3"
uvicorn = "^0.32.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.1"
isort = "^5.13.2"
mypy = "^1.13.0"
ipykernel = "^6.29.5"
pytest = "^8.3.4"


[tool.poetry.group.web.dependencies]
streamlit = "^1.39.0"
pypdf = "^5.1.0"


[tool.poetry.group.training.dependencies]
transformers = "^4.48.0"
tqdm = "^4.67.1"
torch = "^2.5.1"
joblib = "^1.4.2"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
web = "src.app.streamlit_app:run_script"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]

[tool.isort]
profile = "black"
force_sort_within_sections = true
order_by_type = true

[tool.pylint]
disable = [
    "C0114", # missing-module-docstring
    "C0116", # missing-function-docstring
    "C0115", # missing-class-docstring
    "W1401", # for using regex in the code
    "C0103", # For using data-science naming style (X_train, etc.)
]
[tool.pylint.'MASTER']
max-line-length = 120

[tool.mypy]
ignore_missing_imports = true
